--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 <h1>Indian Recipes</h1>
 <ul>
-<li><a href="recipes/recipename.html">Recipe Title</a></li>
+<li><a href="recipes/TomatoPappu.html">Tomato Pappu</a></li>
 </ul>
 </body>
 </html>
